# 2D_MINIGOLF_GAME-ENGINEERING_THESIS

./: README.md  TODO.txt
Docs/: Doxyfile  Praca inżynierska.tex
Docs/latex/: 4_80_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  4_80_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  4_81_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  4_81_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  __mingw__dxhelper_8h.tex  __mingw__dxhelper_8h__dep__incl.md5  __mingw__dxhelper_8h_source.tex  _a_l_check_8cpp.tex  _a_l_check_8cpp__incl.md5  _a_l_check_8hpp.tex  _a_l_check_8hpp__dep__incl.md5  _a_l_check_8hpp__incl.md5  (+5803 more)
mini-golf/: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  DEFINITIONS.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  InputManager.cpp  InputManager.h  LeaderBoardState.cpp  LeaderBoardState.h  LevelCompleteState.cpp  LevelCompleteState.h  LevelManager.cpp  LevelManager.h  LevelSelectState.cpp  LevelSelectState.h  MainMenuState.cpp  MainMenuState.h  PauseMenuState.cpp  PauseMenuState.h  ResourceManager.cpp  ResourceManager.h  SaveManager.cpp  SaveManager.h  SoundManager.cpp  SoundManager.h  State.h  StateManager.cpp  StateManager.h  TextureManager.cpp  TextureManager.h  TileMap.cpp  TileMap.h  (+1 more)
nauka/: Eryk_Galicki_pytania_egzaminacyjne_3_15_27.pptx  Martyna Dawidowicz pytania 2, 14, 26.pptx  Muszynski_sem_pyt9,21,3B.pptx  Opracowanie pytań do egzaminu inżynierskiego.pptx  PatrykMichalak_Pytanie8,20,2b.pptx  SD_5_17_29.pptx  Zagadnienia 12,24,6B.pptx  sem_dyp_4_16_28.pptx
(+1 files in other folders)
